<resources>
    <string name="app_name">Calculator &amp; Unit Converter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Calculator &amp; Converter</string>
    <string name="nav_header_subtitle">NO SUBTITLE</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_units">Unit Converter</string>
    <string name="menu_currency">Currency Converter</string>
    <string name="menu_calculator">Calculator</string>
    <string name="menu_dilution">Dilution Calculator</string>
    <string name="menu_start">Converter Application</string>
    <string name="calculator_button_000">0</string>
    <string name="calculator_button_001">1</string>
    <string name="calculator_button_002">2</string>
    <string name="calculator_button_003">3</string>
    <string name="calculator_button_004">4</string>
    <string name="calculator_button_005">5</string>
    <string name="calculator_button_006">6</string>
    <string name="calculator_button_007">7</string>
    <string name="calculator_button_008">8</string>
    <string name="calculator_button_009">9</string>
    <string name="calculator_button_dot">∙</string>
    <string name="calculator_button_op_delete">DEL</string>
    <string name="calculator_button_op_delete_clear">C</string>
    <string name="calculator_button_op_equal">=</string>
    <string name="calculator_button_op_add">+</string>
    <string name="calculator_button_op_subtract">\u2212</string>
    <string name="calculator_button_op_divide">\u00f7</string>
    <string name="calculator_button_op_multiply">\u00d7</string>
    <string name="calculator_button_op_inverse">INV</string>
    <string name="calculator_button_op_degrees">DEG</string>
    <string name="calculator_button_op_radians">RAD</string>
    <string name="calculator_button_op_reminder">%</string>
    <string name="calculator_button_op_reminder_inverse">mod</string>
    <string name="calculator_button_op_sine">sin</string>
    <string name="calculator_button_op_sine_inverse">sin&#x207B;&#x00B9;</string>
    <string name="calculator_button_op_cosine">cos</string>
    <string name="calculator_button_op_cosine_inverse">cos&#x207B;&#x00B9;</string>
    <string name="calculator_button_op_tangent">tan</string>
    <string name="calculator_button_op_tangent_inverse">tan&#x207B;&#x00B9;</string>
    <string name="calculator_button_op_naturalLog">ln</string>
    <string name="calculator_button_op_naturalLog_inverse">e&lt;sup&gt;&lt;small&gt;x&lt;/small&gt;&lt;/sup&gt;</string>
    <string name="calculator_button_op_logarithm">log</string>
    <string name="calculator_button_op_logarithm_inverse">10&lt;sup&gt;&lt;small&gt;x&lt;/small&gt;&lt;/sup&gt;</string>
    <string name="calculator_button_op_sqrt">&#8730;</string>
    <string name="calculator_button_op_sqrt_inverse">x&#x00B2;</string>
    <string name="calculator_button_op_pi">π</string>
    <string name="calculator_button_op_phi">φ</string>
    <string name="calculator_button_op_euler">e</string>
    <string name="calculator_button_op_exponential">^</string>
    <string name="calculator_button_op_exponential_2">x&lt;sup&gt;&lt;small&gt;y&lt;/small&gt;&lt;/sup&gt;</string>
    <string name="calculator_button_op_openBrackets">(</string>
    <string name="calculator_button_op_closeBrackets">)</string>
    <string name="calculator_button_op_factorial">!</string>
    <string name="calculator_button_op_enter">\u2193</string>
    <string name="calculator_button_hide_panel">&gt;</string>
    <string name="calculator_button_show_panel">&lt;</string>
    <string name="calculator_clear_history">Clear history</string>
    <string name="calculator_error_message_arcSine_arcCosine_op_domain">Domain error!</string>
    <string name="calculator_error_message_generic">Error!</string>
    <string name="calculator_error_message_logarithm_domain">Domain error!</string>
    <string name="calculator_error_message_factorial_domain">Operand not integer!</string>
    <string name="calculator_error_message_mismatch_expression">Bad expression!</string>
    <string name="calculator_error_message_unknown_operator">Unknown operator in expression!</string>
    <string name="calculator_error_message_zero_division">Can\'t divide by 0!</string>
    <string name="calculator_error_message_expression_exception_1">Cannot be 0!</string>
    <string name="calculator_error_message_expression_exception_domain">Domain error!</string>
    <string-array name="calculator_number_buttons_array">
        <item>@string/calculator_button_000</item>
        <item>@string/calculator_button_001</item>
        <item>@string/calculator_button_002</item>
        <item>@string/calculator_button_003</item>
        <item>@string/calculator_button_004</item>
        <item>@string/calculator_button_005</item>
        <item>@string/calculator_button_006</item>
        <item>@string/calculator_button_007</item>
        <item>@string/calculator_button_008</item>
        <item>@string/calculator_button_009</item>
    </string-array>
    <string-array name="calculator_operator_buttons_array">
        <item>@string/calculator_button_dot</item>
        <item>@string/calculator_button_op_add</item>
        <item>@string/calculator_button_op_subtract</item>
        <item>@string/calculator_button_op_divide</item>
        <item>@string/calculator_button_op_multiply</item>
    </string-array>
    <string-array name="calculator_operator_buttons_hidden_array">
        <item>@string/calculator_button_op_reminder</item>
        <item>@string/calculator_button_op_reminder_inverse</item>
        <item>@string/calculator_button_op_sine</item>
        <item>@string/calculator_button_op_sine_inverse</item>
        <item>@string/calculator_button_op_cosine</item>
        <item>@string/calculator_button_op_cosine_inverse</item>
        <item>@string/calculator_button_op_tangent</item>
        <item>@string/calculator_button_op_tangent_inverse</item>
        <item>@string/calculator_button_op_naturalLog</item>
        <item>@string/calculator_button_op_naturalLog_inverse</item>
        <item>@string/calculator_button_op_logarithm</item>
        <item>@string/calculator_button_op_logarithm_inverse</item>
        <item>@string/calculator_button_op_sqrt</item>
        <item>@string/calculator_button_op_sqrt_inverse</item>
        <item>@string/calculator_button_op_exponential</item>
        <item>@string/calculator_button_op_openBrackets</item>
        <item>@string/calculator_button_op_closeBrackets</item>
        <item>@string/calculator_button_op_factorial</item>
    </string-array>
    <string name="currency_update_date_message">Updated:&#160;</string>
    <string name="currency_update_time_message">&#160;at&#160;</string>
    <string name="currency_default_text_country_name">Country</string>
    <string name="currency_default_text_currency_conversion">1.0 ABC = 1.0 CBA</string>
    <string name="currency_default_text_converted_value">$1.00</string>
    <string name="currency_default_file_name">loaded_currencies</string>
    <string name="currency_from_country">From:&#160;</string>
    <string name="currency_from_value">SYM</string>
    <string name="currency_to_country">To:&#160;</string>
    <string name="currency_to_value">SYM</string>
    <string name="currency_to_value_hint">$ CONVERTED</string>
    <string name="dilution_calculate_button">CALCULATE</string>
    <string name="dilution_concen_initial">Initial concentration (% v/v)</string>
    <string name="dilution_concen_initial_hint">99.0</string>
    <string name="dilution_concen_target">Target concentration (% v/v)</string>
    <string name="dilution_concen_target_hint">75.0</string>
    <string name="dilution_erase_button">CLEAR</string>
    <string name="dilution_switch_button_volume_text">Use final volume?</string>
    <string name="dilution_switch_button_solvent_text_1">Solvent</string>
    <string name="dilution_switch_button_solvent_text_2">Ingredient</string>
    <string name="dilution_vol_initial">Initial Volume (mL)</string>
    <string name="dilution_vol_initial_switch_true">Final Volume (mL)</string>
    <string name="dilution_vol_initial_hint">500</string>
    <string name="dilution_vol_result">Dilution volume (mL)</string>
    <string name="dilution_vol_total">Total final volume (mL)</string>
    <string name="dilution_vol_result_switch_true">Initial solution volume (mL)</string>
    <string name="dilution_vol_total_switch_true">Volume of solvent to add (mL)</string>
    <string name="dilution_vol_display_result_switch_false_1">Add</string>
    <string name="dilution_vol_display_result_switch_false_2">mL of solvent</string>
    <string name="dilution_vol_display_result_switch_false_5">mL of ingredient</string>
    <string name="dilution_vol_display_result_switch_false_3">Total volume:</string>
    <string name="dilution_vol_display_result_switch_false_4">mL</string>
    <string name="dilution_vol_display_result_space">&#032;</string>
    <string name="dilution_vol_display_result_switch_true_1">Initial volume:</string>
    <string name="dilution_vol_display_result_switch_true_2">mL</string>
    <string name="dilution_vol_display_result_switch_true_3">Add</string>
    <string name="dilution_vol_display_result_switch_true_4">mL of solvent</string>
    <string name="dilution_vol_display_result_switch_true_5">mL of ingredient</string>
    <string name="units_tab_AREA">Area</string>
    <string name="units_tab_DIST">Distance/Length</string>
    <string name="units_tab_MASS">Mass/Weight</string>
    <string name="units_tab_PRES">Pressure</string>
    <string name="units_tab_SPEE">Speed</string>
    <string name="units_tab_TEMP">Temperature</string>
    <string name="units_tab_TIME">Time</string>
    <string name="units_tab_VOLU">Volume</string>
    <string-array name="units_tabs_names">
        <item>@string/units_tab_AREA</item>
        <item>@string/units_tab_DIST</item>
        <item>@string/units_tab_MASS</item>
        <item>@string/units_tab_PRES</item>
        <item>@string/units_tab_SPEE</item>
        <item>@string/units_tab_TEMP</item>
        <item>@string/units_tab_TIME</item>
        <item>@string/units_tab_VOLU</item>
    </string-array>
    <string name="units_area_select">- Select -</string>
    <string name="units_area_sq_millimetre">Squared Millimeter (mm²)</string>
    <string name="units_area_sq_centimetre">Squared Centimeter (cm²)</string>
    <string name="units_area_sq_metre">Squared Meter (m²)</string>
    <string name="units_area_sq_kilometre">Squared Kilometer (km²)</string>
    <string name="units_area_sq_inch">Squared Inch (in²)</string>
    <string name="units_area_sq_foot">Squared Foot (ft²)</string>
    <string name="units_area_sq_yard">Squared Yard (yd²)</string>
    <string name="units_area_sq_mile">Squared Mile (mi²)</string>
    <string name="units_area_hectare">Hectare (ha)</string>
    <string name="units_area_acre">Acre (ac)</string>
    <string name="units_area_defaultText">-</string>
    <string name="units_area_defaultText_input">Area</string>
    <string-array name="array_area_scales">
        <item>@string/units_area_select</item>
        <item>@string/units_area_sq_millimetre</item>
        <item>@string/units_area_sq_centimetre</item>
        <item>@string/units_area_sq_metre</item>
        <item>@string/units_area_sq_kilometre</item>
        <item>@string/units_area_hectare</item>
        <item>@string/units_area_sq_inch</item>
        <item>@string/units_area_sq_foot</item>
        <item>@string/units_area_sq_yard</item>
        <item>@string/units_area_sq_mile</item>
        <item>@string/units_area_acre</item>
    </string-array>
</resources>