<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_menu_calculator"
            android:title="@string/menu_calculator" />

        <item
            android:id="@+id/nav_currency"
            android:icon="@drawable/ic_menu_currency"
            android:title="@string/menu_currency" />

        <item
            android:id="@+id/nav_units"
            android:icon="@drawable/ic_menu_units"
            android:title="@string/menu_units" />

        <item
            android:id="@+id/nav_dilution"
            android:icon="@drawable/ic_menu_dilution"
            android:title="@string/menu_dilution" />
    </group>
</menu>